--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "description": "Adds a red border to all webpages matching mozilla.org.",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icon-48.png"
   },
 
   "content_scripts": [
@@ -17,7 +17,7 @@
     }
   ],
   "icons": {
-    "48": "icons/border-48.png",
-    "96": "icons/border-96.png"
+    "48": "icon-48.png",
+    "96": "icon-96.png"
   }
 }
